[TASK] v12 support version

--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -3,3 +3,8 @@ services:
     autowire: true
     autoconfigure: true
     public: true
+
+  Mirko\T3customroutes\:
+    resource: '../Classes/*'
+
+
